--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,6 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <meta name="keywords" content="" />
-
+	<link href="./App.css" rel="stylesheet" type="text/css" />
     <title>Frontend final boss</title>
 </head>
